--- a/src/components/GlobalCharacterOverlay/QuickActions.less
+++ b/src/components/GlobalCharacterOverlay/QuickActions.less
@@ -60,7 +60,7 @@
 
 /* Game button - Lotus Pink */
 .quick-action-btn--game {
-    background: #F43F5E;
+    background: var(--primary-color);
 
     &:hover {
         background: #E11D48;
