--- a/src/components/common/Button/styles.less
+++ b/src/components/common/Button/styles.less
@@ -19,7 +19,7 @@
 
     &--primary {
         &.ant-btn-primary {
-            background: linear-gradient(135deg, #F43F5E 0%, #E11D48 100%);
+            background: linear-gradient(135deg, var(--primary-color) 0%, #E11D48 100%);
             border-color: #E11D48;
             text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
 
@@ -32,7 +32,7 @@
 
     &--outline {
         &.ant-btn-default {
-            border-color: #F43F5E;
+            border-color: var(--primary-color);
             color: #8d6e63;
 
             &:hover {
