--- a/src/layouts/AuthLayout/styles.less
+++ b/src/layouts/AuthLayout/styles.less
@@ -3,5 +3,5 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: linear-gradient(135deg, #F43F5E 0%, #E11D48 100%);
+  background: linear-gradient(135deg, var(--primary-color) 0%, #E11D48 100%);
 }
