--- a/src/layouts/MainLayout/styles.less
+++ b/src/layouts/MainLayout/styles.less
@@ -1,7 +1,7 @@
-@primary-color: #f43f5e;
+@primary-color: var(--primary-color);
 @dark-red: #8b1d1d;
 @gold: #d4a574;
 
-@primary-color: #f43f5e;
+@primary-color: var(--primary-color);
 @dark-red: #8b1d1d;
 @gold: #d4a574;
