fix Di san image, fix base css

--- a/src/components/common/cards/DiscoveryCard/styles.less
+++ b/src/components/common/cards/DiscoveryCard/styles.less
@@ -22,7 +22,7 @@
   @media (min-width: 992px) {
     flex-direction: row;
     align-items: stretch;
-    min-height: 480px;
+    height: 480px; // Fixed height instead of min-height
 
     .image-wrapper {
       flex: 1.5; // Takes up 60%
@@ -187,7 +187,7 @@
   @media (min-width: 992px) {
     flex-direction: row;
     align-items: stretch;
-    min-height: 480px;
+    height: 480px; // Fixed height
 
     .image-wrapper {
       flex: 1.5; // Takes up 60%
