--- a/src/components/common/cards/ArticleCard/styles.less
+++ b/src/components/common/cards/ArticleCard/styles.less
@@ -87,6 +87,7 @@
             color: #1a1a1a;
             margin-bottom: 12px;
             line-height: 1.4;
+            height: 52px; // Fixed height for 2 lines (18 * 1.4 * 2 ~= 50.4)
 
             // Truncate to 2 lines
             display: -webkit-box;
